--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "cSpell.language": "en,ua,ru,en-GB,en-US,ru-RU,uk"
+    "cSpell.language": "en,ua,ru,en-GB,en-US,ru-RU,uk",
+    "cSpell.words": [
+        "кастомні",
+        "endregion"
+    ]
 }
